# simple_video_player

./: README.md  index.html  main.py  pyproject.toml  styles.css  template.html
static/: player.js  styles.css
