[tool.poetry]
name = "simple-video-player"
version = "0.1.0"
description = ""
authors = ["Vladislav Dragushin <maxhc@inbox.ru>"]
readme = "README.md"
packages = [{include = "simple_video_player"}]

[tool.poetry.dependencies]
python = "^3.10"
livereload = "^2.6.3"
jinja2 = "^3.1.2"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
